classDiagram
    direction LR

    %% ── Core Auth & Users ──
    class User {
        +int id
        +string name
        +string email
        +string password
        +datetime email_verified_at
        +string remember_token
        +verifyEmail() bool
    }

    class Client {
        +int id
        +string phone_number
        +string status
        +float target_goal
        +float current_weight
        +float height
        +date program_started_at
        +int duration_weeks
        +date deadline /
        +int days_left /
        +calculateBMI() float
        +hasActiveProgram() bool
    }

    class Staff {
        +int id
        +string bio
        +string phone_number
        +string status
        +assignProgram(client_id) bool
    }

    class Specialty {
        +int id
        +string name
    }

    %% ── Nutrition & Programs ──
    class MealCategory {
        +int id
        +string name
    }

    class Meal {
        +int id
        +string name
        +string details
        +float protein
        +float carbs
        +float fats
        +int calories
        +getMacros() string
    }

    class Program {
        +int id
        +string title
        +cloneProgram() Program
    }

    class ProgramItem {
        +int id
        +int day_of_week
        +string time_slot
    }

    class MealValidation {
        +int id
        +string validated_for
        +toggleValidation() bool
    }

    %% ── Monitoring & Finance ──
    class Evolution {
        +int id
        +float weight
        +array images
        +date recorded_at
    }

    class Payment {
        +int id
        +float amount
        +date date
        +string status
        +processPayment() bool
        +refund() bool
    }

    %% ── System ──
    class SystemNotification {
        +int id
        +string title
        +string body
        +string type
        +bool is_read
        +string link
        +markAsRead() void
    }

    class SystemSetting {
        +string key
        +string value
        +get(key) string
    }

    %% ── Structural Associations ──
    User "1" -- "0..1" Client : acts_as
    User "1" -- "0..1" Staff : acts_as
    User "1" --> "0..*" SystemNotification : receives

    Staff "*" -- "*" Specialty : specialized_in
    Staff "1" -- "0..*" Program : designs

    Client "0..*" --> "0..1" Program : follows

    Program "1" *-- "*" ProgramItem : contains
    ProgramItem "*" --> "1" Meal : schedules
    Meal "*" --> "1" MealCategory : categorized_by

    MealValidation "*" --> "1" Client : logs_for
    MealValidation "*" --> "1" ProgramItem : tracks

    Client "1" *-- "0..*" Evolution : monitors
    Client "1" *-- "0..*" Payment : bills